--- a/src/components/TruckBody/TruckBody.scss
+++ b/src/components/TruckBody/TruckBody.scss
@@ -57,7 +57,6 @@
   }
 
   .trailer {
-    position: relative;
     margin: 2px auto;
     background-color: #ffffff;
     border: 2px solid #000000;
@@ -73,11 +72,11 @@
         z-index: 5;
       }
       .flipped {
-        transform: rotate(90deg);
+        transform: rotate(0deg);
       }
     }
     .div_element {
-      cursor: grab;
+      cursor: move;
       border: 1px solid #000000;
       border-radius: 2px;
       .dimensions {
@@ -93,42 +92,35 @@
         font-size: 0.8rem;
         color: rgb(54, 54, 54);
       }
-      .delete__icon {
-        position: absolute;
-        bottom: 0;
-        right: 3px;
-        width: 16px;
-        cursor: pointer;
-        svg {
-          transition: all 0.2s ease-in-out;
-          width: 16px;
-          height: 16px;
-          fill: #000000;
+      .icons__wrap {
+        display: flex;
+        gap: 3px;
+        align-items: center;
+        .delete__icon,
+        .rotate__icon {
+          display: none;
+          margin-left: 3px;
+          cursor: pointer;
+          svg {
+            transition: all 0.2s ease-in-out;
+            width: 17px;
+            height: 17px;
+            fill: #000000;
+          }
+        }
+        .delete__icon,
+        .rotate__icon:hover {
+          svg {
+            transform: scale(1.1);
+          }
         }
       }
-      .delete__icon:hover {
-        svg {
-          transform: scale(1.1);
-        }
-      }
-      .rotate__icon {
-        position: absolute;
-        bottom: 2%;
-        right: 33%;
-        width: 16px;
-        cursor: pointer;
-        svg {
-          transition: all 0.2s ease-in-out;
-          width: 20px;
-          height: 20px;
-          fill: #000000;
-        }
-      }
-      .rotate__icon:hover {
-        svg {
-          transform: scale(1.1);
-        }
-      }
+    }
+    .div_element:hover > .icons__wrap > .delete__icon {
+      display: block;
+    }
+    .div_element:hover > .icons__wrap > .rotate__icon {
+      display: block;
     }
   }
 }
