--- a/src/components/TruckBody/TruckBody.scss
+++ b/src/components/TruckBody/TruckBody.scss
@@ -58,7 +58,7 @@
 
   .trailer {
     margin: 2px auto;
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     border: 2px solid #000000;
     border-radius: 3px;
     margin-bottom: 2rem;
