--- a/src/components/Control/Control.scss
+++ b/src/components/Control/Control.scss
@@ -32,6 +32,7 @@
     align-items: center;
     justify-content: center;
     form {
+      justify-content: center;
       font-size: 0.9rem;
       font-weight: 400;
       display: flex;
