--- a/src/components/TodoApp/TodoApp.module.scss
+++ b/src/components/TodoApp/TodoApp.module.scss
@@ -1,9 +1,9 @@
 .todoAppContainer {
   background-color: #ffffff;
   padding: 5px;
-  width: 300px;
+  width: 310px;
   border: 1px solid #e9e9e9;
-  border-radius: 5px;
+  border-radius: 7px;
   -webkit-box-shadow: -1px 7px 26px -18px rgba(66, 68, 90, 1);
   -moz-box-shadow: -1px 7px 26px -18px rgba(66, 68, 90, 1);
   box-shadow: -1px 7px 26px -18px rgba(66, 68, 90, 1);
@@ -14,10 +14,14 @@
   gap: 5px;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 45px;
   color: #ffffff;
   background-color: #000000;
   border-radius: 5px;
+}
+
+.logoWrapper:hover {
+  cursor: move;
 }
 
 h6 {
