--- a/src/components/TodoApp/components/Todos/Todo.module.scss
+++ b/src/components/TodoApp/components/Todos/Todo.module.scss
@@ -9,8 +9,8 @@ $completedTaskColor: #7ed73f;
   background-color: #ffffff;
   border: 1px solid #dee2e6;
   border-radius: 5px;
-  margin-top: 8px;
-  padding-left: 5px;
+  margin-top: 6px;
+  padding: 4px 5px;
   .task {
     font-size: 0.95rem;
     max-width: 320px;
@@ -39,13 +39,12 @@ $completedTaskColor: #7ed73f;
     transition: all 0.2s ease-in-out;
   }
   .deleteIcon:hover {
-    color: #dc3545;
+    color: #e93849;
     transform: scale(1.1);
   }
   .completeIcon {
     color: #c5bebe;
     transition: all 0.2s ease-in-out;
-
     cursor: pointer;
   }
   .completeIcon:hover {
@@ -58,7 +57,6 @@ $completedTaskColor: #7ed73f;
     gap: 3px;
   }
 }
-
 .todoWrapper:hover {
-  background-color: #f1f1f1;
+  background-color: #f0f8ff;
 }
