--- a/src/components/TodoApp/components/Todos/TodoActions.module.scss
+++ b/src/components/TodoApp/components/Todos/TodoActions.module.scss
@@ -2,21 +2,32 @@
   display: flex;
   gap: 10px;
   padding-top: 10px;
+  padding-bottom: 3px;
 }
 
-button {
+.btn {
   display: flex;
   align-items: center;
   gap: 3px;
   background-color: #ffffff;
   border: 1px solid #dee2e6;
+  border-radius: 5px;
   color: #000000;
   font-size: 0.9rem;
   padding: 0.15rem 0.35rem;
-  border-radius: 5px;
   cursor: pointer;
 }
 
-button:hover {
+.iconAifillDelete,
+.iconLuRefreshCCw {
+  transition: all 0.3s ease-in-out;
+}
+
+.btn:hover {
   border: 1px solid #000000;
+}
+
+.btn:hover .iconAifillDelete,
+.btn:hover .iconLuRefreshCCw {
+  color: #e93849;
 }
